--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,7 @@ text-align: center;
 
 
 
+
 .card-body{
 width: 15rem;
   
@@ -97,12 +98,15 @@ justify-content: center;
 margin-top: -5px;
 }
 
-.formAgMat{
+
+
+
+.formAgMat, .formEdMat{
   width:300px ;
   
 
 }
-.formAgMat > .container{
+.formAgMat , .formEdMat > .container{
 display: flex;
 flex-direction: row;
 justify-content: center;
@@ -110,6 +114,9 @@ align-items: center;
 height: 200PX;
 
 }
+
+
+
 
 
 
