--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ height: 200PX;
 /*Agregar Docentes*/
 
 /*Encabezado*/
-.formAgDoc > .containerDatosPersonales{
+.formAgAlum > .containerDatosPersonales, .formAgDoc > .containerDatosPersonales{
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -130,7 +130,7 @@ height: 200PX;
 
 }  
 /*Formulario*/
-.formAgDoc > .container, .formReadDoc > .container
+.formAgAlum > .container, .formAgDoc > .container, .formReadDoc > .container, .formReadAl >.container
 {
     display: flex;
     flex-direction: row;
@@ -154,12 +154,12 @@ height:685px;
 
 /*Read Edit Delete Docentes*/
 
-#scrollMatVer > label
+label
 {
     display: block;
 }
 
-.formReadDoc > .containerDatosPersonales{
+.formReadDoc > .containerDatosPersonales, .formReadAl> .containerDatosPersonales{
     height: 50px;
     display: flex;
     justify-content:space-between;
@@ -184,6 +184,17 @@ height:685px;
    height:685px;
    
    } 
+
+   /*Agregar Alumno*/
+
+   .formAgAlum, .formReadAl{
+    width: 600px;
+    height:790px;
+  
+   }
+
+
+   
 
 
 
