--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,16 +102,17 @@ margin-top: -5px;
 
 
 .formAgMat, .formEdMat{
-  width:300px ;
+  width:500px ;
   
 
 }
-.formAgMat , .formEdMat > .container{
+.formAgMat> .container , .formEdMat > .container{
 display: flex;
 flex-direction: row;
 justify-content: center;
 align-items: center;
 height: 200PX;
+width: 500px;
 
 }
 
